Change page description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Contact from '../components/Contact';
 import Footer from '../components/Footer';
 ---
 
-<Layout title="Modern Portfolio - Your Name">
+<Layout title="Andres Cardenas">
   <Header client:load />
   <main>
     <Hero client:load />
